--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,7 @@ futures-core = "0.3.31"
 glob = "0.3"
 num_enum = "0.7.3"
 pin-project = "1.1.8"
+
+[dev-dependencies]
+futures = "0.3.31"
+tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
